<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="320dp"
android:layout_height="wrap_content"
android:orientation="vertical"
android:background="@drawable/auto_moment_configure_rounded_background"
    >

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/ck_moment_configure_select_labels_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:padding="16dp"
    />

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    >


    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/ck_moment_configure_font_size_large_button_text"
        android:text="@string/ck_one_moment_configure_confirm"
        android:background="@drawable/auto_moment_configure_special_widget_rounded_background"
        android:textColor="@color/special_button_text"
        app:layout_constraintWidth_percent="0.27"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reset_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/ck_moment_configure_font_size_large_button_text"
        android:text="@string/ck_one_moment_configure_reset"
        android:textColor="@color/normal_button_text"
        android:background="@drawable/auto_moment_configure_widget_rounded_background"
        app:layout_constraintWidth_percent="0.27"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
        app:layout_constraintStart_toEndOf="@+id/confirm_btn"
        app:layout_constraintTop_toTopOf="parent">
    </Button>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/ck_moment_configure_font_size_large_button_text"
        android:text="@string/ck_one_moment_configure_cancel"
        android:textColor="@color/normal_button_text"
        android:background="@drawable/auto_moment_configure_widget_rounded_background"
        app:layout_constraintWidth_percent="0.27"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reset_btn"
        app:layout_constraintTop_toTopOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
