<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ck_moment_configure_wrapper_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/auto_moment_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ck_moment_configure_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/ck_one_moment_configure_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/ck_moment_configure_split_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/normal_button_bg"
            android:layout_marginVertical="6dp"
            app:layout_constraintBottom_toTopOf="@+id/ck_moment_configure_scroll_view"
            app:layout_constraintTop_toBottomOf="@id/ck_moment_configure_title" />

        <ScrollView
            android:id="@+id/ck_moment_configure_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="6dp"
            app:layout_constraintBottom_toTopOf="@id/ck_moment_configure_bottom_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="240dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ck_moment_configure_split_line">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ck_moment_configure_main_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                app:layout_constraintTop_toBottomOf="@id/ck_moment_configure_split_line">

                <LinearLayout
                    android:id="@+id/ck_moment_configure_moment_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ck_moment_configure_line_height"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginEnd="8dp"
                        android:text="@string/ck_one_moment_configure_name"
                        android:textSize="@dimen/ck_moment_configure_font_size_view_text"
                        android:textColor="@color/normal_widget_text" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Spinner
                            android:id="@+id/ck_moment_configure_moment_name_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/auto_moment_configure_widget_rounded_background"
                            android:popupBackground="@drawable/auto_moment_configure_widget_rounded_background" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:padding="10dp"
                            android:src="@drawable/auto_moment_configure_spinner_angle" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ck_moment_configure_related_template"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ck_moment_configure_line_height"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@id/ck_moment_configure_moment_name">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginEnd="8dp"
                        android:textSize="@dimen/ck_moment_configure_font_size_view_text"
                        android:text="@string/ck_one_moment_configure_related_template"
                        android:textColor="@color/normal_widget_text" />

                    <EditText
                        android:id="@+id/ck_moment_configure_related_template_view"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@drawable/auto_moment_configure_widget_rounded_background"
                        android:hint="@string/ck_one_moment_configure_related_template"
                        android:inputType="text"
                        android:paddingHorizontal="6dp"
                        android:textColor="@color/normal_widget_text"
                        android:textColorHint="@color/normal_widget_text"
                        android:textSize="@dimen/ck_moment_configure_font_size_view_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ck_moment_configure_time"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ck_moment_configure_line_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@id/ck_moment_configure_related_template">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginEnd="8dp"
                        android:textSize="@dimen/ck_moment_configure_font_size_view_text"
                        android:text="@string/ck_one_moment_configure_time"
                        android:textColor="@color/normal_widget_text" />

                    <EditText
                        android:id="@+id/ck_moment_configure_time_start"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@drawable/auto_moment_configure_widget_rounded_background"
                        android:focusable="false"
                        android:hint="@string/ck_one_moment_configure_time_start_hint"
                        android:inputType="text"
                        android:paddingHorizontal="6dp"
                        android:textColor="@color/normal_widget_text"
                        android:textColorHint="@color/normal_widget_text"
                        android:textSize="@dimen/ck_moment_configure_font_size_view_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="6dp"
                        android:gravity="center"
                        android:textSize="@dimen/ck_moment_configure_font_size_view_text"
                        android:text="~"
                        android:textColor="@color/normal_widget_text" />

                    <EditText
                        android:id="@+id/ck_moment_configure_time_end"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@drawable/auto_moment_configure_widget_rounded_background"
                        android:focusable="false"
                        android:hint="@string/ck_one_moment_configure_time_end_hint"
                        android:inputType="text"
                        android:paddingHorizontal="6dp"
                        android:textColor="@color/normal_widget_text"
                        android:textColorHint="@color/normal_widget_text"
                        android:textSize="@dimen/ck_moment_configure_font_size_view_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ck_moment_configure_location"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ck_moment_configure_line_height"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@id/ck_moment_configure_time">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/ck_moment_configure_font_size_view_text"
                        android:text="@string/ck_one_moment_configure_location"
                        android:textColor="@color/normal_widget_text" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Spinner
                            android:id="@+id/ck_moment_configure_location_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/auto_moment_configure_widget_rounded_background"
                            android:popupBackground="@drawable/auto_moment_configure_widget_rounded_background" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:padding="10dp"
                            android:src="@drawable/auto_moment_configure_spinner_angle" />
                    </FrameLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ck_moment_configure_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/ck_moment_configure_location" />

                <LinearLayout
                    android:id="@+id/ck_moment_configure_add_tag"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ck_moment_configure_line_height"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@id/ck_moment_configure_tags">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginEnd="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/ck_one_moment_configure_add_tag"
                        android:textSize="@dimen/ck_moment_configure_font_size_view_text"
                        android:textColor="@color/normal_widget_text" />

                    <Button
                        android:id="@+id/ck_moment_configure_add_tag_btn"
                        android:layout_width="@dimen/ck_moment_configure_small_button_width"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:autofillHints=""
                        android:background="@drawable/auto_moment_configure_widget_rounded_background"
                        android:hint="+"
                        android:padding="0dp"
                        android:textColor="@color/normal_widget_text"
                        android:textColorHint="@color/normal_widget_text"
                        android:textSize="@dimen/ck_moment_configure_font_size_view_text" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ck_moment_configure_bottom_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ck_moment_configure_higher_line_height"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ck_moment_configure_scroll_view">


            <Button
                android:id="@+id/ck_moment_configure_save_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="12dp"
                android:background="@drawable/auto_moment_configure_special_widget_rounded_background"
                android:text="@string/ck_one_moment_configure_save"
                android:textColor="@color/special_button_text"
                android:textSize="@dimen/ck_moment_configure_font_size_large_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ck_moment_configure_back_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.36" />

            <Button
                android:id="@+id/ck_moment_configure_back_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="12dp"
                android:background="@drawable/auto_moment_configure_widget_rounded_background"
                android:text="@string/ck_one_moment_configure_back"
                android:textColor="@color/normal_button_text"
                android:textSize="@dimen/ck_moment_configure_font_size_large_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ck_moment_configure_save_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.36" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>